fix btn text wrap

--- a/src/scss/components/_btn.scss
+++ b/src/scss/components/_btn.scss
@@ -9,7 +9,12 @@
 
   &__wrapper {
     margin-inline: auto;
-    max-width: 32rem;
+    max-width: 30rem;
+  }
+
+  &__download,
+  &__green {
+    white-space: nowrap;
   }
 
   &__download {
